--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <main>
-      <div class="container">
-        <h1 class="main-title">
+      <div class="gallery">
+        <!-- <h1 class="main-title">
           <span class="main-title-gradient">Welcome</span> to Gallery
-        </h1>
+        </h1> -->
       </div>
     </main>
   </body>
