--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <!-- Loads the specified .html file -->
+      <h1>Gallery</h1>
     </main>
 
     <script type="module" src="./main.js"></script>
