--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -9,11 +9,7 @@
   </head>
   <body>
     <main>
-      <div class="gallery">
-        <!-- <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to Gallery
-        </h1> -->
-      </div>
+      <div class="gallery"></div>
     </main>
   </body>
 </html>
