script to i-gallery.html

--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -11,5 +11,6 @@
     <main>
       <div class="gallery"></div>
     </main>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
