link to gallery from index.html

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <body>
     <main>
       <!-- Loads the specified .html file -->
-      <h1>Gallery</h1>
+      <h1>Welcome</h1>
+      <a href="1-gallery.html" alt="to gallery"></a>
     </main>
 
     <script type="module" src="./main.js"></script>
