--- a/src/2-form.html
+++ b/src/2-form.html
@@ -11,8 +11,20 @@
     <main>
       <div class="container">
         <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to fill the Form
+          Please fill the <span class="main-title-gradient">Form</span>
         </h1>
+
+        <form class="feedback-form" autocomplete="off">
+          <label>
+            Email
+            <input type="email" name="email" autofocus />
+          </label>
+          <label>
+            Message
+            <textarea name="message" rows="8"></textarea>
+          </label>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </main>
   </body>
