--- a/src/2-form.html
+++ b/src/2-form.html
@@ -13,7 +13,8 @@
         <h1 class="main-title">
           Please fill the <span class="main-title-gradient">Form</span>
         </h1>
-
+      </div>
+      <div class="container">
         <form class="feedback-form" autocomplete="off">
           <label>
             Email
@@ -27,5 +28,6 @@
         </form>
       </div>
     </main>
+    <script src="./js/2-form.js"></script>
   </body>
 </html>
