--- a/src/2-form.html
+++ b/src/2-form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 3</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
     <main>
@@ -14,7 +15,7 @@
           Please fill the <span class="main-title-gradient">Form</span>
         </h1>
       </div>
-      <div class="container">
+      <div class="form-container">
         <form class="feedback-form" autocomplete="off">
           <label>
             Email
@@ -28,6 +29,6 @@
         </form>
       </div>
     </main>
-    <script src="./js/2-form.js"></script>
+    <script type="module" src="js/2-form.js"></script>
   </body>
 </html>
