--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/container.css" />
   </head>
   <body>
     <main>
       <div class="gallery"></div>
+      <div class="container">
+        <h3>
+          <a href="index.html"><p>Back to mainpage</p></a>
+        </h3>
+      </div>
     </main>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
