--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,13 +7,12 @@
     <title>Page 3</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/2-form.css" />
+    <link rel="stylesheet" href="./css/container.css" />
   </head>
   <body>
     <main>
       <div class="container">
-        <h1 class="main-title">
-          Please fill the <span class="main-title-gradient">Form</span>
-        </h1>
+        <h2>Please fill the <span class="main-title-gradient">Form</span></h2>
       </div>
       <div class="form-container">
         <form class="feedback-form" autocomplete="off">
@@ -27,6 +26,11 @@
           </label>
           <button type="submit">Submit</button>
         </form>
+      </div>
+      <div class="container">
+        <h3>
+          <a href="index.html"><p>Back to mainpage</p></a>
+        </h3>
       </div>
     </main>
     <script type="module" src="js/2-form.js"></script>
