--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <main>
       <!-- Loads the specified .html file -->
       <h1>Welcome</h1>
-      <a href="1-gallery.html">to the gallery</a>
+      <a href="1-gallery.html">to the gallery /</a>
       <a href="2-form.html">to fill the form</a>
     </main>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
