nav add to index

--- a/src/2-form.html
+++ b/src/2-form.html
@@ -33,6 +33,6 @@
         </h3>
       </div>
     </main>
-    <script type="module" src="js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
