--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
     <main>
       <!-- Loads the specified .html file -->
       <h1>Welcome</h1>
-      <a href="1-gallery.html">to the gallery /</a>
-      <a href="2-form.html">to fill the form</a>
+      <nav>
+        <ul>
+          <li><a href="1-gallery.html">to the gallery</a></li>
+          <li><a href="2-form.html">to fill the form</a></li>
+        </ul>
+      </nav>
     </main>
 
     <script type="module" src="./js/main.js"></script>
