change paths in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <h1>Welcome</h1>
       <nav>
         <ul>
-          <li><a href="1-gallery.html">to the gallery</a></li>
-          <li><a href="2-form.html">to fill the form</a></li>
+          <li><a href="./1-gallery.html">to the gallery</a></li>
+          <li><a href="./2-form.html">to fill the form</a></li>
         </ul>
       </nav>
     </main>
